fix vertical-align for img

--- a/source/styles/core/global.styl
+++ b/source/styles/core/global.styl
@@ -34,6 +34,7 @@ a
 
 img
     max-width: 100%
+    vertical-align: middle
 
 
 
